# regularized_lqr_jax

./: README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench_tree_regularized_lqr.py
docs/: tree_regularized_lqr.md
regularized_lqr_jax/: helpers.py  solver.py  tree_solver.py  types.py
test/: test.py  test_tree_solver.py
